# KBAI-project

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  Mohamed_Ghoniem_CV.docx  README.md  app.py  app_hf.py  debug_vectorstore.py  docker-compose.yml  main.py  pyproject.toml  rebuild_and_test.py  requirements.txt  setup_and_run.sh
.github/workflows/: ci.yml
.streamlit/: secrets.example.toml
src/: __init__.py  config.py  embeddings.py  ingestion.py  langgraph_pipeline.py  llm_integration.py  logging_config.py  provider.py  retrieval.py  vectorstore.py
standalone/: __init__.py  config.py  embeddings.py  ingestion.py  llm_integration.py  pipeline.py  retrieval.py  vectorstore.py
